--- a/unik4740/refs.bib
+++ b/unik4740/refs.bib
@@ -37,4 +37,19 @@
   note = {Accessed: 8-09-2015}
 }
 
+@misc{DEJAN_HOOK,
+  author = "Dejan Lukan",
+  title = "API Hooking and DLL Injection on Windows",
+  howpublished = {\url{http://resources.infosecinstitute.com/api-hooking-and-dll-injection-on-windows/}},
+  note = {Accessed: 9-09-2015}
+}
+
+@misc{BREMER_HOOK,
+  author = "Jurriaan Bremer",
+  title = "x86 API Hooking Demystified",
+  howpublished = {\url{http://jbremer.org/x86-api-hooking-demystified/}},
+  note = {Accessed: 10-09-2015}
+}
+
+
 
