--- a/unik4740/refs.bib
+++ b/unik4740/refs.bib
@@ -16,7 +16,7 @@
 
  @techreport{DUQU_SYMANTEC,
   author = "Symantec",
-  title = {W32.Duqu: The precursor to the next Stuxnet},
+  title = {W32.Duqu: The precursor to the next Stuxnetd},
   howpublished = {\url{http://www.symantec.com/content/en/us/enterprise/media/security_response/whitepapers/w32_duqu_the_precursor_to_the_next_stuxnet.pdf}},
   type = {Report},
   institution = "Symantec Security Response",
@@ -50,6 +50,15 @@
   howpublished = {\url{http://jbremer.org/x86-api-hooking-demystified/}},
   note = {Accessed: 10-09-2015}
 }
+
+@misc{TT_MSB,
+  author = "Microsoft",
+  title = "Microsoft Security Bulletin MS11-087 - Critical ",
+  howpublished = {\url{https://technet.microsoft.com/library/security/ms11-087}},
+  note = {Accessed: 12-09-2015}
+}
+
+https://technet.microsoft.com/library/security/ms11-087
 
 
 
